kubernetes/dev/ssmcloud-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssmcloud-dev-backend
  labels:
    app: ssmcloud-dev-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ssmcloud-dev-backend
  template:
    metadata:
      labels:
        app: ssmcloud-dev-backend
    spec:
      volumes:
        - name: ssmdata
          persistentVolumeClaim:
            claimName: ssmcloud-dev-backend-data-pvc
      containers:
        - env:
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  key: mongodb_server
                  name: ssmcloud-dev-backend-secret
            - name: DB_DB
              valueFrom:
                secretKeyRef:
                  key: mongodb_db
                  name: ssmcloud-dev-backend-secret
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  key: mongodb_user
                  name: ssmcloud-dev-backend-secret
            - name: DB_PASS
              valueFrom:
                secretKeyRef:
                  key: mongodb_pass
                  name: ssmcloud-dev-backend-secret
            - name: JWT_KEY
              valueFrom:
                secretKeyRef:
                  key: jwt_key
                  name: ssmcloud-dev-backend-secret
        - name: ssmcloud-dev-backend
          image: mrhid6/ssmcloud-backend:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: "/home/ssm/ssmcloud_data"
              name: ssmdata
