kubernetes/dev/ssmcloud-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ssmcloud-dev-backend-svc
spec:
  type: ClusterIP
  selector:
    app: ssmcloud-dev-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
