kubernetes/dev/ssmcloud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssmcloud-dev-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.ssmcloud-dev.hostxtra.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssmcloud-dev-backend-svc
                port:
                  number: 3000
